--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <div id="app"></div>
+    <script src="https://js.pusher.com/4.3/pusher.min.js"></script>
     <noscript>
         You need to enable JavaScript to run this app.
     </noscript>
