--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>VUGLE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="src\app\components\icons\favicon.ico">
 </head>
 <body>
     <div id="app"></div>
